Rotacion implementada ... por fin